Auto-expand a single or invalid occurrence of an item- or option-set. Fixed layout conflict of the remove and help-text icons. Fixed validation of a new occurrence. Added highlighting of an invalid collapsed occurrence (#1555)

--- a/src/main/resources/assets/admin/common/styles/api/form-common.less
+++ b/src/main/resources/assets/admin/common/styles/api/form-common.less
@@ -85,6 +85,8 @@
     position: relative;
     z-index: 1;
     width: 17px;
+    height: 17px;
+    line-height: 17px;
     text-align: center;
     font-size: 12px;
     color: white;
