--- a/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
+++ b/src/main/resources/assets/admin/common/styles/api/form/set/form-set-view.less
@@ -42,7 +42,7 @@
           .icon-close();
           .focusable();
 
-          margin-top: 3px;
+          margin-top: 1px;
           margin-right: -4px;
           border: 1px solid transparent;
           line-height: 12px;
@@ -123,6 +123,8 @@
           }
 
           > .form-occurrence-draggable-label {
+            width: calc(100% - 26px);
+
             &:not(.custom-label) {
               line-height: 21px;
               height: 20px;
@@ -204,6 +206,23 @@
   }
 
   &.display-validation-errors {
+
+    .form-item-set-occurrence-view,
+    .form-option-set-occurrence-view {
+      &.invalid.collapsed {
+        border: 3px solid @admin-red;
+        box-shadow: none;
+      }
+    }
+
+    .form-item-set-occurrence-view.invalid.collapsed {
+      padding: 10px;
+    }
+
+    .form-option-set-occurrence-view.invalid.collapsed {
+      padding: 7px;
+    }
+
     .input-view.invalid {
       padding: 10px;
 
